--- a/FS17-RadiomanagerPro/MainWindow.xaml
+++ b/FS17-RadiomanagerPro/MainWindow.xaml
@@ -11,7 +11,8 @@
             <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             <Label x:Name="label" Content="Right click on result to add a radio station. Brought to you by elpatron." HorizontalAlignment="Center"/>
         </StackPanel>
-        <Button x:Name="btnSearch" Content="Search www.radio-browser.info" HorizontalAlignment="Left" Margin="142,10,0,0" VerticalAlignment="Top" Width="194" Height="23" IsDefault="True"/>
+	<Button x:Name="btnSearch" Content="_Search www.radio-browser.info" HorizontalAlignment="Left" Margin="142,10,0,0" VerticalAlignment="Top" Width="184" Height="23" IsDefault="True"/>
+        <Button x:Name="btnEdit" Content="_Edit FS17 radio stations" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="164" Height="23" IsDefault="True"/>
         <ListBox x:Name="resultView" Margin="10,63,10,10">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -41,7 +42,6 @@
                               Click="_StationHomepage"
                               >
                     </MenuItem>
-
                 </ContextMenu>
             </ListBox.ContextMenu>
         </ListBox>
